use metadataCopy