@@ -82,7 +82,7 @@
 
     <profiles>
         <profile>
-            <id>generateStandardMetadata</id>
+            <id>generateMetadata</id>
             <build>
                 <plugins>
                     <plugin>
@@ -93,15 +93,20 @@
                         <configuration>
                             <agent>
                                 <enabled>true</enabled>
-                                <defaultMode>Direct</defaultMode>
+                                <defaultMode>Conditional</defaultMode>
                                 <modes>
-                                    <direct>config-output-dir=${project.basedir}/src/main/resources/META-INF/native-image/${project.groupId}/${project.artifactId}</direct>
+                                    <conditional>
+                                        <userCodeFilterPath>${user.dir}/user-code-filter.json</userCodeFilterPath>
+                                        <parallel>true</parallel>
+                                    </conditional>
                                 </modes>
-                                <options>
-                                    <callerFilterFiles>
-                                        <filterFile>${user.dir}/caller-filter.json</filterFile>
-                                    </callerFilterFiles>
-                                </options>
+                                <metadataCopy>
+                                    <disabledStages>
+                                        <stage>main</stage>
+                                    </disabledStages>
+                                    <merge>true</merge>
+                                    <outputDirectory>${project.basedir}/src/main/resources/META-INF/native-image/${project.groupId}/${project.artifactId}</outputDirectory>
+                                </metadataCopy>
                             </agent>
                         </configuration>
                         <executions>
@@ -128,16 +133,6 @@
             <id>native</id>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.11.0</version>
-                        <configuration>
-                            <source>17</source>
-                            <target>17</target>
-                            <compilerArgument>--enable-preview</compilerArgument>
-                        </configuration>
-                    </plugin>
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
@@ -167,9 +162,6 @@
                                 <arg>-H:+AllowDeprecatedBuilderClassesOnImageClasspath</arg>
                                 <arg>--report-unsupported-elements-at-runtime</arg>
                             </buildArgs>
-                            <jvmArgs>
-                                <arg>--enable-preview</arg>
-                            </jvmArgs>
                             <metadataRepository>
                                 <enabled>true</enabled>
                             </metadataRepository>
